deploy: 10dd4030d2afa6fdc02260b089f5eb2c4af4639b

--- a/index.html
+++ b/index.html
@@ -539,11 +539,11 @@
 </a>
 
 <a href="https://github.com/mwallraf/python_twonms_config/actions">
-    <img src="https://github.com/mwallraf/python_twonms_config/actions/workflows/release.yml/badge.svg?branch=release" alt="CI Status">
+    <img src="https://github.com/mwallraf/python_twonms_config/actions/workflows/main.yml/badge.svg?branch=release" alt="CI Status">
 </a>
 
-<a href="https://mwallraf.github.io/python_twonms_config/">
-    <img src="https://img.shields.io/badge/Maintained%3F-yes-green.svg" alt="Documentation Status">
+<a href="https://python-twonms-config.readthedocs.io/en/latest/?badge=latest">
+    <img src="https://readthedocs.org/projects/python-twonms-config/badge/?version=latest" alt="Documentation Status">
 </a>
 
 </p>
